feat: sticky note mode

--- a/resources.qrc
+++ b/resources.qrc
@@ -13,6 +13,7 @@
         <file>images/remixicons/scissors-cut-line.svg</file>
         <file>images/remixicons/printer-line.svg</file>
         <file>images/remixicons/settings-4-line.svg</file>
+        <file>images/remixicons/sticky-note-line.svg</file>
     </qresource>
     <qresource prefix="/asset">
         <file>images/logo.png</file>
