--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -41,7 +41,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>28</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -76,8 +76,15 @@
     <addaction name="actionPaste"/>
     <addaction name="actionCut"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionSticky_note_mode"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
+   <addaction name="menuView"/>
    <addaction name="menuAbout"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -250,6 +257,18 @@
    </property>
    <property name="toolTip">
     <string>Preferences</string>
+   </property>
+  </action>
+  <action name="actionSticky_note_mode">
+   <property name="icon">
+    <iconset resource="../../resources.qrc">
+     <normaloff>:/remixicons/images/remixicons/sticky-note-line.svg</normaloff>:/remixicons/images/remixicons/sticky-note-line.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Sticky note mode</string>
+   </property>
+   <property name="toolTip">
+    <string>Sticky note</string>
    </property>
   </action>
  </widget>
