--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -80,6 +80,7 @@
     <property name="title">
      <string>View</string>
     </property>
+    <addaction name="actionNormalmode"/>
     <addaction name="actionSticky_note_mode"/>
    </widget>
    <addaction name="menuFile"/>
@@ -269,6 +270,18 @@
    </property>
    <property name="toolTip">
     <string>Sticky note</string>
+   </property>
+  </action>
+  <action name="actionNormalmode">
+   <property name="icon">
+    <iconset resource="../../resources.qrc">
+     <normaloff>:/remixicons/images/remixicons/file-edit-line.svg</normaloff>:/remixicons/images/remixicons/file-edit-line.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Normal mode</string>
+   </property>
+   <property name="toolTip">
+    <string>Normal mode</string>
    </property>
   </action>
  </widget>
