feat: pin to top

--- a/resources.qrc
+++ b/resources.qrc
@@ -15,6 +15,7 @@
         <file>images/remixicons/settings-4-line.svg</file>
         <file>images/remixicons/sticky-note-line.svg</file>
         <file>images/remixicons/file-edit-line.svg</file>
+        <file>images/remixicons/pushpin-line.svg</file>
     </qresource>
     <qresource prefix="/asset">
         <file>assets/CREDIT.md</file>
