--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -41,7 +41,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>25</height>
+     <height>34</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -83,6 +83,7 @@
     <addaction name="actionNormalmode"/>
     <addaction name="actionSticky_note_mode"/>
     <addaction name="separator"/>
+    <addaction name="actionPin_to_top"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
@@ -283,6 +284,18 @@
    </property>
    <property name="toolTip">
     <string>Normal mode</string>
+   </property>
+  </action>
+  <action name="actionPin_to_top">
+   <property name="icon">
+    <iconset resource="../../resources.qrc">
+     <normaloff>:/remixicons/images/remixicons/pushpin-line.svg</normaloff>:/remixicons/images/remixicons/pushpin-line.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Pin to top</string>
+   </property>
+   <property name="toolTip">
+    <string>Pin window</string>
    </property>
   </action>
  </widget>
