feat: preview panel!

--- a/resources.qrc
+++ b/resources.qrc
@@ -16,6 +16,7 @@
         <file>images/remixicons/sticky-note-line.svg</file>
         <file>images/remixicons/file-edit-line.svg</file>
         <file>images/remixicons/pushpin-line.svg</file>
+        <file>images/remixicons/eye-line.svg</file>
     </qresource>
     <qresource prefix="/asset">
         <file>assets/CREDIT.md</file>
